--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
       "files": "*.raml",
       "options": {
         "parser": "yaml",
-        "proseWrap": "always"
+        "proseWrap": "preserve"
       }
     }
   ]
