--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -242,7 +242,7 @@ jobs:
         with:
           repository: commercetools-sdk-typescript
           branch: gen-sdk-updates
-          commit_message: "ci(codegen): Updating Platform SDK"
+          commit_message: "build(codegen): updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
