--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -400,7 +400,7 @@ jobs:
 
       - name: "Run code formatter"
         run: "dotnet-format"
-        working-directory: commercetools-dotnet-core-sdk-v2
+        working-directory: commercetools-dotnet-core-sdk-v2/commercetools.Sdk
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
