--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -399,7 +399,7 @@ jobs:
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
 
       - name: "Run code formatter"
-        run: "dotnet-format"
+        run: "dotnet-format --fix-style warn"
         working-directory: commercetools-dotnet-core-sdk-v2/commercetools.Sdk
 
       - name: "check pending changes"
