--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -59,7 +59,7 @@ jobs:
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
 
       - name: "Switch SDK to update branch"
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: |
           git fetch --depth=1 origin gen-sdk-updates || true
           git checkout -B gen-sdk-updates origin/gen-sdk-updates || true
@@ -68,7 +68,7 @@ jobs:
         working-directory: commercetools-sdk-php-v2
 
       - name: "Switch SDK to update branch"
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/main'
         run: |
           git fetch --depth=1 origin ${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
           git checkout -B gen-sdk-updates origin/${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
@@ -90,7 +90,7 @@ jobs:
         working-directory: commercetools-sdk-php-v2
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/main'
         with:
           repository: commercetools-sdk-php-v2
           branch: gen-sdk-updates
@@ -100,7 +100,7 @@ jobs:
           commit_author: Auto Mation <automation@commercetools.com>
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/master'
+        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main'
         with:
           repository: commercetools-sdk-php-v2
           branch: ${{ steps.branch_name.outputs.SOURCE_BRANCH }}
@@ -153,7 +153,7 @@ jobs:
         working-directory: postman
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.CHANGES_PENDING != '0'  && github.ref == 'refs/heads/master'
+        if: env.CHANGES_PENDING != '0'  && github.ref == 'refs/heads/main'
         with:
           repository: postman
           branch: master
@@ -195,7 +195,7 @@ jobs:
         working-directory: commercetools-api-reference
 
       - name: "Switch SDK to update branch"
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: |
           git fetch --depth=1 origin gen-sdk-updates || true
           git checkout -B gen-sdk-updates origin/gen-sdk-updates || true
@@ -204,7 +204,7 @@ jobs:
         working-directory: commercetools-sdk-java-v2
 
       - name: "Switch SDK to update branch"
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/main'
         run: |
           git fetch --depth=1 origin ${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
           git checkout -B gen-sdk-updates origin/${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
@@ -227,7 +227,7 @@ jobs:
         working-directory: commercetools-sdk-java-v2
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/main'
         with:
           repository: commercetools-sdk-java-v2
           branch: gen-sdk-updates
@@ -237,7 +237,7 @@ jobs:
           commit_author: Auto Mation <automation@commercetools.com>
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/master'
+        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main'
         with:
           repository: commercetools-sdk-java-v2
           branch: ${{ steps.branch_name.outputs.SOURCE_BRANCH }}
@@ -284,7 +284,7 @@ jobs:
         working-directory: commercetools-api-reference
 
       - name: "Switch SDK to update branch"
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: |
           git fetch --depth=1 origin gen-sdk-updates || true
           git checkout -B gen-sdk-updates origin/gen-sdk-updates || true
@@ -293,7 +293,7 @@ jobs:
         working-directory: commercetools-sdk-typescript
 
       - name: "Switch SDK to update branch"
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/main'
         run: |
           git fetch --depth=1 origin ${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
           git checkout -B gen-sdk-updates origin/${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
@@ -316,7 +316,7 @@ jobs:
         working-directory: commercetools-sdk-typescript
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/main'
         with:
           repository: commercetools-sdk-typescript
           branch: gen-sdk-updates
@@ -326,7 +326,7 @@ jobs:
           commit_author: Auto Mation <automation@commercetools.com>
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/master'
+        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main'
         with:
           repository: commercetools-sdk-typescript
           branch: ${{ steps.branch_name.outputs.SOURCE_BRANCH }}
@@ -371,7 +371,7 @@ jobs:
         working-directory: commercetools-api-reference
 
       - name: "Switch SDK to update branch"
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: |
           git fetch --depth=1 origin gen-sdk-updates || true
           git checkout -B gen-sdk-updates origin/gen-sdk-updates || true
@@ -380,7 +380,7 @@ jobs:
         working-directory: commercetools-dotnet-core-sdk-v2
 
       - name: "Switch SDK to update branch"
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/main'
         run: |
           git fetch --depth=1 origin ${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
           git checkout -B gen-sdk-updates origin/${{ steps.branch_name.outputs.SOURCE_BRANCH }} || true
@@ -409,7 +409,7 @@ jobs:
         working-directory: commercetools-dotnet-core-sdk-v2
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/main'
         with:
           repository: commercetools-dotnet-core-sdk-v2
           branch: gen-sdk-updates
@@ -419,7 +419,7 @@ jobs:
           commit_author: Auto Mation <automation@commercetools.com>
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/master'
+        if: github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main'
         with:
           repository: commercetools-dotnet-core-sdk-v2
           branch: ${{ steps.branch_name.outputs.SOURCE_BRANCH }}
