--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commercetools-api-reference",
-  "description": "Commercetools API master specification",
+  "description": "Commercetools API specification",
   "repository": {
     "type": "git",
     "url": "https://github.com/commercetools/commercetools-api-reference"
