--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -50,9 +50,9 @@ jobs:
             php${{ matrix.php-version }}-composer-
 
       - run: sudo chmod 777 /usr/local/bin && make -j2 generate lint
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/main'
       - run: sudo chmod 777 /usr/local/bin && make -j2 build
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
