markdown linter without raml-parser

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "type": "git",
     "url": "https://github.com/commercetools/commercetools-api-reference"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "@apidevtools/swagger-cli": "^4.0.4",
+    "js-yaml": "^4.0.0",
     "markdownlint": "^0.25.1",
     "oas-raml-converter": "^1.1.27",
     "prettier": "^1.19.1",
-    "raml-1-parser": "^1.1.40",
-    "traverse": "^0.6.6"
+    "traverse": "^0.6.6",
+    "globby": "^13.1.1"
   },
   "scripts": {
     "format:raml": "prettier --write '**/*.raml'",
@@ -21,5 +23,6 @@
     "swagger-cli": "swagger-cli"
   },
   "private": true,
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
