--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v2
 
-      - name: "Setup node"
-        uses: actions/setup-node@v1
+      - name: Setup Node (uses version in .nvmrc)
+        uses: actions/setup-node@v2
         with:
-          node-version: '12'
+          node-version-file: '.nvmrc'
 
       - run: make lint
