--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -258,10 +258,10 @@ jobs:
         with:
           java-version: '13'
 
-      - name: "Install node"
-        uses: actions/setup-node@v1
+      - name: Setup Node (uses version in .nvmrc)
+        uses: actions/setup-node@v2
         with:
-          node-version: '12'
+          node-version-file: '.nvmrc'
 
       - name: "Checkout api reference"
         uses: actions/checkout@v2
