--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,10 +36,10 @@ jobs:
           tools: composer
           ini-values: assert.exception=1, zend.assertions=1
 
-      - name: "Setup node"
-        uses: actions/setup-node@v1
+      - name: Setup Node (uses version in .nvmrc)
+        uses: actions/setup-node@v2
         with:
-          node-version: '12'
+          node-version-file: '.nvmrc'
 
       - name: "Cache dependencies installed with composer"
         uses: actions/cache@v1
