--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -253,16 +253,6 @@ jobs:
     continue-on-error: true
 
     steps:
-      - name: "Install Java"
-        uses: actions/setup-java@v1
-        with:
-          java-version: '13'
-
-      - name: Setup Node (uses version in .nvmrc)
-        uses: actions/setup-node@v2
-        with:
-          node-version-file: '.nvmrc'
-
       - name: "Checkout api reference"
         uses: actions/checkout@v2
         with:
@@ -274,6 +264,16 @@ jobs:
           repository: 'commercetools/commercetools-sdk-typescript'
           path: commercetools-sdk-typescript
           ssh-key: ${{ secrets.TS_SDK_DEPLOY_KEY }}
+
+      - name: "Install Java"
+        uses: actions/setup-java@v1
+        with:
+          java-version: '13'
+
+      - name: Setup Node (uses version in .nvmrc)
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: 'commercetools-api-reference/.nvmrc'
 
       - name: Retrieve branch name
         id: branch_name
