--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -212,12 +212,16 @@ jobs:
           git log -1
         working-directory: commercetools-sdk-java-v2
 
+      - name: "Apply Java SDK mixin"
+        run: |
+          cp commercetools-sdk-java-v2/api-java-mixin.raml commercetools-api-reference/api-specs/api/java-mixin.raml
+
       - name: "Generate Java SDK"
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: commercetools-sdk-java-v2
         env:
           RAML_FILE: "../commercetools-api-reference/api-specs/api/api.raml"
-          API_RAML: "../commercetools-api-reference/api-specs/api/api.raml"
+          API_RAML: "../commercetools-api-reference/api-specs/api/java-mixin.raml"
           IMPORT_RAML: "../commercetools-api-reference/api-specs/importapi/api.raml"
           ML_RAML: "../commercetools-api-reference/api-specs/ml/api.raml"
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
