--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -439,3 +439,6 @@ jobs:
   check:
     runs-on: ubuntu-latest
     needs: [ 'php', 'postman', 'java', 'typescript', 'csharp']
+
+    steps:
+      - run: echo "Success"
