remove raml formatting

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -14,14 +14,18 @@ jobs:
 
     steps:
       - name: "Checkout api reference"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: commercetools-api-reference
 
       - name: "Checkout previous api reference"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: commercetools-api-reference-previous
+
+      - name: Show commit ID
+        run: git log -s --pretty=%h --no-merges -n 1 --skip 1
+        working-directory: commercetools-api-reference-previous
 
       - name: "Switch to previous commit"
         run: git checkout `git log -s --pretty=%h --no-merges -n 1 --skip 1`
