--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -24,11 +24,11 @@ jobs:
           path: commercetools-api-reference-previous
 
       - name: Show commit ID
-        run: git log -s --pretty=%h --no-merges -n 1 --skip 1 | cat
+        run: echo "previous=`git log --format='%H' --no-merges -n 1 --skip 1`" >> $GITHUB_ENV
         working-directory: commercetools-api-reference-previous
 
       - name: "Switch to previous commit"
-        run: git checkout `git log -s --pretty=%h --no-merges -n 1 --skip 1 | cat`
+        run: git checkout ${{ env.previous }}
         working-directory: commercetools-api-reference-previous
 
       - name: "Install codegen"
