--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -21,10 +21,11 @@ jobs:
       - name: "Checkout previous api reference"
         uses: actions/checkout@v3
         with:
+          fetch-depth: 50
           path: commercetools-api-reference-previous
 
       - name: Show commit ID
-        run: echo "previous=`git log --format='%H' --no-merges -n 1 --skip 1`" >> $GITHUB_ENV
+        run: echo "previous=$(git log --format='%H' --no-merges -n 1 --skip 1)" >> $GITHUB_ENV
         working-directory: commercetools-api-reference-previous
 
       - name: "Switch to previous commit"
