--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -31,6 +31,7 @@ jobs:
         continue-on-error: true
         id: diff_api
         run: |
+          rmf-codegen diff commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
           rmf-codegen diff -t changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
           OUTPUT=cat changes_api.txt
           echo "::set-output name=result::$OUTPUT"
