specify folder to write to

--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -32,7 +32,7 @@ jobs:
         id: diff_api
         run: |
           rmf-codegen diff commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
-          rmf-codegen diff -t changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+          rmf-codegen diff -t ./changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
           OUTPUT=cat changes_api.txt
           echo "::set-output name=result::$OUTPUT"
 
@@ -40,7 +40,7 @@ jobs:
         id: diff_history
         continue-on-error: true
         run: |
-          rmf-codegen diff -t changes_history.txt commercetools-api-reference-main/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+          rmf-codegen diff -t ./changes_history.txt commercetools-api-reference-main/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
           OUTPUT=cat changes_history.txt
           echo "::set-output name=result::$OUTPUT"
 
@@ -48,7 +48,7 @@ jobs:
         id: diff_importapi
         continue-on-error: true
         run: |
-          rmf-codegen diff -t changes_import.txt commercetools-api-reference-main/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+          rmf-codegen diff -t ./changes_import.txt commercetools-api-reference-main/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
           OUTPUT=cat changes_import.txt
           echo "::set-output name=result::$OUTPUT"
 
@@ -56,7 +56,7 @@ jobs:
         id: diff_ml
         continue-on-error: true
         run: |
-          rmf-codegen diff -t changes_ml.txt commercetools-api-reference-main/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+          rmf-codegen diff -t ./changes_ml.txt commercetools-api-reference-main/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
           OUTPUT=cat changes_ml.txt
           echo "::set-output name=result::$OUTPUT"
 
