--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -33,7 +33,8 @@ jobs:
         run: |
           rmf-codegen diff commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
           rmf-codegen diff -t ./changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
-          OUTPUT=cat changes_api.txt
+          cat ./changes_api.txt
+          OUTPUT=`cat ./changes_api.txt`
           echo "::set-output name=result::$OUTPUT"
 
       - name: 'Calculate diff (History)'
@@ -41,7 +42,7 @@ jobs:
         continue-on-error: true
         run: |
           rmf-codegen diff -t ./changes_history.txt commercetools-api-reference-main/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
-          OUTPUT=cat changes_history.txt
+          OUTPUT=`cat ./changes_history.txt`
           echo "::set-output name=result::$OUTPUT"
 
       - name: 'Calculate diff (ImportAPI)'
@@ -49,7 +50,7 @@ jobs:
         continue-on-error: true
         run: |
           rmf-codegen diff -t ./changes_import.txt commercetools-api-reference-main/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
-          OUTPUT=cat changes_import.txt
+          OUTPUT=`cat ./changes_import.txt`
           echo "::set-output name=result::$OUTPUT"
 
       - name: 'Calculate diff (ML)'
@@ -57,7 +58,7 @@ jobs:
         continue-on-error: true
         run: |
           rmf-codegen diff -t ./changes_ml.txt commercetools-api-reference-main/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
-          OUTPUT=cat changes_ml.txt
+          OUTPUT=`cat ./changes_ml.txt`
           echo "::set-output name=result::$OUTPUT"
 
       - uses: marocchino/sticky-pull-request-comment@v2
