--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -33,8 +33,7 @@ jobs:
         run: |
           rmf-codegen diff commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
           rmf-codegen diff -t ./changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
-          cat ./changes_api.txt
-          OUTPUT=`cat ./changes_api.txt`
+          OUTPUT=$(cat ./changes_api.txt)
           echo "::set-output name=result::$OUTPUT"
 
       - name: 'Calculate diff (History)'
