--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -30,55 +30,45 @@ jobs:
       - name: 'Calculate diff (CoCo)'
         continue-on-error: true
         id: diff_api
-        run: |
-          rmf-codegen diff commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
-          rmf-codegen diff -t ./changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
-          OUTPUT=$(cat ./changes_api.txt)
-          echo "::set-output name=result::$OUTPUT"
+        run: rmf-codegen diff -t ./changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: 'Calculate diff (History)'
         id: diff_history
         continue-on-error: true
-        run: |
-          rmf-codegen diff -t ./changes_history.txt commercetools-api-reference-main/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
-          OUTPUT=`cat ./changes_history.txt`
-          echo "::set-output name=result::$OUTPUT"
+        run: rmf-codegen diff -t ./changes_history.txt commercetools-api-reference-main/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
 
       - name: 'Calculate diff (ImportAPI)'
         id: diff_importapi
         continue-on-error: true
-        run: |
-          rmf-codegen diff -t ./changes_import.txt commercetools-api-reference-main/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
-          OUTPUT=`cat ./changes_import.txt`
-          echo "::set-output name=result::$OUTPUT"
+        run: rmf-codegen diff -t ./changes_import.txt commercetools-api-reference-main/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
 
       - name: 'Calculate diff (ML)'
         id: diff_ml
         continue-on-error: true
+        run: rmf-codegen diff -t ./changes_ml.txt commercetools-api-reference-main/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+
+      - name: 'Create comment'
         run: |
-          rmf-codegen diff -t ./changes_ml.txt commercetools-api-reference-main/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
-          OUTPUT=`cat ./changes_ml.txt`
-          echo "::set-output name=result::$OUTPUT"
+          echo "### CoCo RAML changes" > ./changes.txt
+          echo "" >> ./changes.txt
+          cat ./changes_api.txt >> ./changes.txt
+          echo "" >> ./changes.txt
+          echo "### Import RAML changes" >> ./changes.txt
+          echo "" >> ./changes.txt
+          cat ./changes_import.txt >> ./changes.txt
+          echo "" >> ./changes.txt
+          echo "### History RAML changes" >> ./changes.txt
+          echo "" >> ./changes.txt
+          cat ./changes_history.txt >> ./changes.txt
+          echo "" >> ./changes.txt
+          echo "### ML RAML changes" >> ./changes.txt
+          echo "" >> changes.txt
+          cat ./changes_ml.txt >> ./changes.txt
+          echo "" >> ./changes.txt
+          cat ./changes.txt
 
       - uses: marocchino/sticky-pull-request-comment@v2
         if: github.event_name == 'pull_request'
         with:
           header: changes
-          message: |
-            ```
-            ### CoCo RAML changes
-            
-            ${{ steps.diff_api.outputs.result }}
-
-            ### Import RAML changes
-            
-            ${{ steps.diff_importapi.outputs.result }}
-
-            ### History RAML changes
-            
-            ${{ steps.diff_history.outputs.result }}
-
-            ### ML RAML changes
-            
-            ${{ steps.diff_ml.outputs.result }}
-            ```
+          path: changes.txt
