--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -30,22 +30,22 @@ jobs:
       - name: 'Calculate diff (CoCo)'
         continue-on-error: true
         id: diff_api
-        run: rmf-codegen diff -t ./changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        run: rmf-codegen diff -f MARKDOWN -t ./changes_api.txt commercetools-api-reference-main/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: 'Calculate diff (History)'
         id: diff_history
         continue-on-error: true
-        run: rmf-codegen diff -t ./changes_history.txt commercetools-api-reference-main/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+        run: rmf-codegen diff -f MARKDOWN -t ./changes_history.txt commercetools-api-reference-main/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
 
       - name: 'Calculate diff (ImportAPI)'
         id: diff_importapi
         continue-on-error: true
-        run: rmf-codegen diff -t ./changes_import.txt commercetools-api-reference-main/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+        run: rmf-codegen diff -f MARKDOWN -t ./changes_import.txt commercetools-api-reference-main/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
 
       - name: 'Calculate diff (ML)'
         id: diff_ml
         continue-on-error: true
-        run: rmf-codegen diff -t ./changes_ml.txt commercetools-api-reference-main/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+        run: rmf-codegen diff -f MARKDOWN -t ./changes_ml.txt commercetools-api-reference-main/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
 
       - name: 'Create comment'
         run: |
