--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -50,25 +50,25 @@ jobs:
       - name: 'Create comment'
         run: |
           if [ -f ./changes_api.txt ]; then
-            echo "### CoCo RAML changes" >> ./changes.txt
+            echo "## CoCo RAML changes" >> ./changes.txt
             echo "" >> ./changes.txt
             cat ./changes_api.txt >> ./changes.txt
             echo "" >> ./changes.txt
           fi
           if [ -f ./changes_import.txt ]; then
-            echo "### Import RAML changes" >> ./changes.txt
+            echo "## Import RAML changes" >> ./changes.txt
             echo "" >> ./changes.txt
             cat ./changes_import.txt >> ./changes.txt
             echo "" >> ./changes.txt
           fi
           if [ -f ./changes_history.txt ]; then
-            echo "### History RAML changes" >> ./changes.txt
+            echo "## History RAML changes" >> ./changes.txt
             echo "" >> ./changes.txt
             cat ./changes_history.txt >> ./changes.txt
             echo "" >> ./changes.txt
           fi
           if [ -f ./changes_ml.txt ]; then
-            echo "### ML RAML changes" >> ./changes.txt
+            echo "## ML RAML changes" >> ./changes.txt
             echo "" >> changes.txt
             cat ./changes_ml.txt >> ./changes.txt
             echo "" >> ./changes.txt
