fail workflow is one SDK job fails

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -471,4 +471,6 @@ jobs:
     needs: [ 'php', 'postman', 'java', 'typescript', 'csharp']
 
     steps:
-      - run: echo "Success"
+      - name: 'Check result'
+        if: ${{ jobs.php.result == 'failure' || jobs.postman.result == 'failure' || jobs.java.result == 'failure' || jobs.typescript.result == 'failure' || jobs.csharp.result == 'failure' }}
+        run: exit 1
