revert: fail workflow is one SDK job fails

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -472,5 +472,5 @@ jobs:
 
     steps:
       - name: 'Check result'
-        if: ${{ jobs.php.result == 'failure' || jobs.postman.result == 'failure' || jobs.java.result == 'failure' || jobs.typescript.result == 'failure' || jobs.csharp.result == 'failure' }}
+      #  if: ${{ jobs.php.result == 'failure' || jobs.postman.result == 'failure' || jobs.java.result == 'failure' || jobs.typescript.result == 'failure' || jobs.csharp.result == 'failure' }}
         run: exit 1
