--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -472,5 +472,5 @@ jobs:
 
     steps:
       - name: 'Check result'
-      #  if: ${{ jobs.php.result == 'failure' || jobs.postman.result == 'failure' || jobs.java.result == 'failure' || jobs.typescript.result == 'failure' || jobs.csharp.result == 'failure' }}
+        if: ${{ needs.php.result == 'failure' || needs.postman.result == 'failure' || needs.java.result == 'failure' || needs.typescript.result == 'failure' || needs.csharp.result == 'failure' }}
         run: exit 1
