--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -271,9 +271,10 @@ jobs:
       - name: "Store api reference version"
         run: |
           if [ ! -f reference.txt ]; then
-            git log --format='%H' --no-merges -n 1 --skip 1 > reference.txt
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-sdk-java-v2/reference.txt
           fi
-          echo "previous=$(cat reference.txt)" >> $GITHUB_ENV
+          echo "previous=$(cat ../commercetools-sdk-java-v2/reference.txt)" >> $GITHUB_ENV
+        working-directory: commercetools-api-reference-previous
 
       - name: "Switch to previous commit"
         run: git checkout ${{ env.previous }}
