--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -265,7 +265,7 @@ jobs:
       - name: "Checkout previous api reference"
         uses: actions/checkout@v3
         with:
-          fetch-depth: 100
+          fetch-depth: 1000
           path: commercetools-api-reference-previous
 
       - name: "Store api reference version"
@@ -281,7 +281,11 @@ jobs:
         working-directory: commercetools-api-reference-previous
 
       - name: "Calculate diff"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        uses: commercetools/clients-automation/.github/workflows/sdk-diff.yml@v1
+        with:
+          api_ref: commercetools-api-reference
+          api_ref_pref: commercetools-api-reference-previous
+          sdk: commercetools-sdk-java-v2
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
