--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -280,12 +280,17 @@ jobs:
         run: git checkout ${{ env.previous }}
         working-directory: commercetools-api-reference-previous
 
-      - name: "Calculate diff"
-        uses: commercetools/clients-automation/.github/workflows/sdk-diff.yml@v1
-        with:
-          api_ref: commercetools-api-reference
-          api_ref_pref: commercetools-api-reference-previous
-          sdk: commercetools-sdk-java-v2
+      - name: "Calculate diff (API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+
+      - name: "Calculate diff (Import API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-import.md commercetools-api-reference-previous/api-specs/import/api.raml commercetools-api-reference/api-specs/import/api.raml
+
+      - name: "Calculate diff (History)"
+        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+
+      - name: "Calculate diff (ML)"
+        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
