--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -270,7 +270,7 @@ jobs:
 
       - name: "Store api reference version"
         run: |
-          if [ ! -f reference.txt ]; then
+          if [ ! -f ../commercetools-sdk-java-v2/reference.txt ]; then
             git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-sdk-java-v2/reference.txt
           fi
           echo "previous=$(cat ../commercetools-sdk-java-v2/reference.txt)" >> $GITHUB_ENV
