--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -121,6 +121,67 @@ jobs:
           ML_RAML: "../commercetools-api-reference/api-specs/ml/api.raml"
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
 
+      - name: "Checkout previous api reference"
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          path: commercetools-api-reference-previous
+
+      - name: "Store api reference version"
+        run: |
+          if [ ! -f ../commercetools-sdk-php-v2/reference.txt ]; then
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-sdk-php-v2/reference.txt
+          fi
+          echo "previous=$(cat ../commercetools-sdk-php-v2/reference.txt)" >> $GITHUB_ENV
+        working-directory: commercetools-api-reference-previous
+
+      - name: "Switch to previous commit"
+        run: git checkout ${{ env.previous }}
+        working-directory: commercetools-api-reference-previous
+
+      - name: "Calculate diff (API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+
+      - name: "Calculate diff (Import API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+
+      - name: "Calculate diff (History)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+
+      - name: "Calculate diff (ML)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+
+      - name: 'Create change file'
+        run: |
+          if [ -f ./changes_api.md ]; then
+            echo "**Api changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_api.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_import.md ]; then
+            echo "**Import changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_import.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_history.md ]; then
+            echo "**History changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_history.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_ml.md ]; then
+            echo "**ML changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_ml.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes.md ]; then
+            cat ./changes.md
+          fi
+          cp ./changes.md ./commercetools-sdk-php-v2/changes.md
+
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
         working-directory: commercetools-sdk-php-v2
@@ -281,16 +342,47 @@ jobs:
         working-directory: commercetools-api-reference-previous
 
       - name: "Calculate diff (API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: "Calculate diff (Import API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
 
       - name: "Calculate diff (History)"
-        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
 
       - name: "Calculate diff (ML)"
-        run: rmf-codegen diff -f MARKDOWN -o ./commercetools-sdk-java-v2/changes-ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+
+      - name: 'Create change file'
+        run: |
+          if [ -f ./changes_api.md ]; then
+            echo "**Api changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_api.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_import.md ]; then
+            echo "**Import changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_import.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_history.md ]; then
+            echo "**History changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_history.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_ml.md ]; then
+            echo "**ML changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_ml.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes.md ]; then
+            cat ./changes.md
+          fi
+          cp ./changes.md ./commercetools-sdk-java-v2/changes.md
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -380,6 +472,67 @@ jobs:
           IMPORT_RAML: "../commercetools-api-reference/api-specs/importapi/api.raml"
           ML_RAML: "../commercetools-api-reference/api-specs/ml/api.raml"
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
+
+      - name: "Checkout previous api reference"
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          path: commercetools-api-reference-previous
+
+      - name: "Store api reference version"
+        run: |
+          if [ ! -f ../commercetools-sdk-typescript/reference.txt ]; then
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-sdk-typescript/reference.txt
+          fi
+          echo "previous=$(cat ../commercetools-sdk-typescript/reference.txt)" >> $GITHUB_ENV
+        working-directory: commercetools-api-reference-previous
+
+      - name: "Switch to previous commit"
+        run: git checkout ${{ env.previous }}
+        working-directory: commercetools-api-reference-previous
+
+      - name: "Calculate diff (API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+
+      - name: "Calculate diff (Import API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+
+      - name: "Calculate diff (History)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+
+      - name: "Calculate diff (ML)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+
+      - name: 'Create change file'
+        run: |
+          if [ -f ./changes_api.md ]; then
+            echo "**Api changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_api.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_import.md ]; then
+            echo "**Import changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_import.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_history.md ]; then
+            echo "**History changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_history.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_ml.md ]; then
+            echo "**ML changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_ml.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes.md ]; then
+            cat ./changes.md
+          fi
+          cp ./changes.md ./commercetools-sdk-typescript/changes.md
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -477,6 +630,67 @@ jobs:
           dotnet-format
           dotnet-format --fix-style warn
         working-directory: commercetools-dotnet-core-sdk-v2/commercetools.Sdk
+
+      - name: "Checkout previous api reference"
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          path: commercetools-api-reference-previous
+
+      - name: "Store api reference version"
+        run: |
+          if [ ! -f ../commercetools-dotnet-core-sdk-v2/reference.txt ]; then
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-dotnet-core-sdk-v2/reference.txt
+          fi
+          echo "previous=$(cat ../commercetools-dotnet-core-sdk-v2/reference.txt)" >> $GITHUB_ENV
+        working-directory: commercetools-api-reference-previous
+
+      - name: "Switch to previous commit"
+        run: git checkout ${{ env.previous }}
+        working-directory: commercetools-api-reference-previous
+
+      - name: "Calculate diff (API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+
+      - name: "Calculate diff (Import API)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+
+      - name: "Calculate diff (History)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+
+      - name: "Calculate diff (ML)"
+        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+
+      - name: 'Create change file'
+        run: |
+          if [ -f ./changes_api.md ]; then
+            echo "**Api changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_api.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_import.md ]; then
+            echo "**Import changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_import.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_history.md ]; then
+            echo "**History changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_history.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes_ml.md ]; then
+            echo "**ML changes**" >> ./changes.md
+            echo "" >> ./changes.md
+            cat ./changes_ml.md >> ./changes.md
+            echo "" >> ./changes.md
+          fi
+          if [ -f ./changes.md ]; then
+            cat ./changes.md
+          fi
+          cp ./changes.md ./commercetools-dotnet-core-sdk-v2/changes.md
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
