configure java16 for CI pipeline

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -214,10 +214,11 @@ jobs:
 
     steps:
 
-      - name: "Install Java"
-        uses: actions/setup-java@v1
+      - name: 'Setup Java'
+        uses: actions/setup-java@v3
         with:
-          java-version: '13'
+          distribution: temurin
+          java-version: '16'
 
       - name: "Checkout api reference"
         uses: actions/checkout@v3
@@ -266,10 +267,11 @@ jobs:
     continue-on-error: true
 
     steps:
-      - name: "Install Java"
-        uses: actions/setup-java@v1
+      - name: 'Setup Java'
+        uses: actions/setup-java@v3
         with:
-          java-version: '8'
+          distribution: temurin
+          java-version: '16'
 
       - name: "Checkout api reference"
         uses: actions/checkout@v3
@@ -427,10 +429,11 @@ jobs:
           path: commercetools-sdk-typescript
           ssh-key: ${{ secrets.TS_SDK_DEPLOY_KEY }}
 
-      - name: "Install Java"
-        uses: actions/setup-java@v1
+      - name: 'Setup Java'
+        uses: actions/setup-java@v3
         with:
-          java-version: '13'
+          distribution: temurin
+          java-version: '16'
 
       - name: Setup Node (uses version in .nvmrc)
         uses: actions/setup-node@v2
@@ -565,6 +568,12 @@ jobs:
     continue-on-error: true
 
     steps:
+      - name: 'Setup Java'
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: '16'
+
       - name: "Install Csharp"
         uses: actions/setup-dotnet@v1
         with:
